[gd_scene load_steps=41 format=3 uid="uid://ba4pilfmeuhu1"]

[ext_resource type="Texture2D" uid="uid://88t1elds7jx0" path="res://icon.svg" id="1_aqn3d"]
[ext_resource type="Script" path="res://World/Enemy/Boss/Rensen/rensen.gd" id="1_eredk"]
[ext_resource type="Resource" uid="uid://cg228wgfeerlx" path="res://World/Enemy/Boss/Rensen/RensenStatistics.tres" id="2_ngyl8"]
[ext_resource type="Resource" uid="uid://dq6wos7xjoy1b" path="res://World/Enemy/Boss/Rensen/RensenMovementData.tres" id="3_gbs3j"]
[ext_resource type="PackedScene" uid="uid://b0le0qnpwy8f2" path="res://World/Enemy/Boss/Rensen/rensen_projectile.tscn" id="4_kgheo"]
[ext_resource type="Script" path="res://music/AudioPlayer/SoundQueue.gd" id="6_ko50r"]
[ext_resource type="AudioStream" uid="uid://biy4ep3cqkxrk" path="res://music/sfx/HIT soundeffect/bosshit.mp3" id="7_mjvbq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cs1kj"]
emission_shape = 1
emission_sphere_radius = 13.13
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 70.0
initial_velocity_max = 70.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.5
tangential_accel_min = 175.0
tangential_accel_max = 175.0
damping_min = 100.0
damping_max = 100.0
angle_max = 360.0
scale_min = 2.0
scale_max = 3.0
color = Color(0.415686, 0.266667, 0.592157, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_idb1h"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 10.0
damping_max = 50.0
scale_min = 5.0
scale_max = 8.0
color = Color(0.164706, 0.219608, 0.423529, 1)
turbulence_noise_strength = 1.54
turbulence_noise_scale = 2.06
turbulence_noise_speed_random = 0.74
collision_mode = 1
collision_friction = 0.0
collision_bounce = 1.0

[sub_resource type="Gradient" id="Gradient_5o7ya"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.652695, 0.88024, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.401198, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_i4jk8"]
gradient = SubResource("Gradient_5o7ya")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_674n2"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = -1.0
orbit_velocity_max = 1.0
damping_min = 10.0
damping_max = 50.0
scale_min = 2.0
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_i4jk8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fv4c"]
size = Vector2(48, 48)

[sub_resource type="Animation" id="Animation_o6uup"]
resource_name = "Circle Attack"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpreadShot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 6.28319, 12.5664]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}, {
"args": [],
"method": &"circleShot"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CircleShotTimer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationTree:parameters/conditions/circleAttack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.375, 0.375), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.375, 0.375)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_to_top"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25, 0.45),
"transitions": PackedFloat32Array(0.138696, 8.87654, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.25, 0.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.43051e-06, 1.43051e-06), Vector2(0, -300), Vector2(1.43051e-06, 1.43051e-06)]
}

[sub_resource type="Animation" id="Animation_qw87m"]
resource_name = "Died"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.375, 0.375)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(16.5642, 0.615572),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.145098, 0.145098, 0.145098, 0.964706)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effect/DyingParticle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Effect/DyingParticle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(6.23493, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5, 2.55, 2.6, 2.65, 2.7, 2.75, 2.8, 2.85, 2.9, 2.95, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, -0.349066, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Effect/Explosion:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Effect/Flash/ColorRect:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(2.9, 3, 3.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Effect/Flash:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(2.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b6uby"]
resource_name = "Follow"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"move_to_closest_point"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.375, 0.375)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bikbl"]
resource_name = "Intro"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:health")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [100]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effect/DyingParticle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n1u1y"]
resource_name = "Resurection"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Effect/Spawn:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25, 2.5, 2.75, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.375, 0.375), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.375, 0.375), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.3, 0.3), Vector2(0.4, 0.4), Vector2(0.375, 0.375)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:health")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}, {
"args": [],
"method": &"update_health"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:fight")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lpole"]
resource_name = "Spreadshot"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"SpreadShoot"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.349066, 0.349066, -0.349066, 0.349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.375, 0.375)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gftpn"]
resource_name = "Waiting"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.375, 0.375), Vector2(0.45, 0.45), Vector2(0.375, 0.375)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_35c6x"]
_data = {
"Circle Attack": SubResource("Animation_o6uup"),
"Died": SubResource("Animation_qw87m"),
"Follow": SubResource("Animation_b6uby"),
"Intro": SubResource("Animation_bikbl"),
"Resurection": SubResource("Animation_n1u1y"),
"Spreadshot": SubResource("Animation_lpole"),
"Waiting": SubResource("Animation_gftpn")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7vncg"]
animation = &"Circle Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xlrbo"]
animation = &"Died"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jo3is"]
animation = &"Follow"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7op4q"]
animation = &"Intro"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n4yee"]
animation = &"Resurection"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vfeeq"]
animation = &"Spreadshot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wl722"]
animation = &"Waiting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8md4l"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8j6k4"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2v7qo"]
switch_mode = 2
advance_mode = 2
advance_condition = &"circleAttack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2qx3v"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wwkwy"]
switch_mode = 2
advance_mode = 2
advance_condition = &"FinalDeath"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4mtwj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ltfmq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kv1q4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"FirstDeath"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_an34w"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wnqau"]
"states/Circle Attack/node" = SubResource("AnimationNodeAnimation_7vncg")
"states/Circle Attack/position" = Vector2(545.441, 261)
states/Died/node = SubResource("AnimationNodeAnimation_xlrbo")
states/Died/position = Vector2(789.441, 100)
states/End/position = Vector2(919, 100)
states/Follow/node = SubResource("AnimationNodeAnimation_jo3is")
states/Follow/position = Vector2(515, 100)
states/Intro/node = SubResource("AnimationNodeAnimation_7op4q")
states/Intro/position = Vector2(120.441, 100)
states/Resurection/node = SubResource("AnimationNodeAnimation_n4yee")
states/Resurection/position = Vector2(380.441, 100)
states/Spreadshot/node = SubResource("AnimationNodeAnimation_vfeeq")
states/Spreadshot/position = Vector2(583, -42)
states/Start/position = Vector2(-2, 100)
states/Waiting/node = SubResource("AnimationNodeAnimation_wl722")
states/Waiting/position = Vector2(241.441, 100)
transitions = ["Follow", "Spreadshot", SubResource("AnimationNodeStateMachineTransition_8md4l"), "Spreadshot", "Follow", SubResource("AnimationNodeStateMachineTransition_8j6k4"), "Follow", "Circle Attack", SubResource("AnimationNodeStateMachineTransition_2v7qo"), "Circle Attack", "Follow", SubResource("AnimationNodeStateMachineTransition_2qx3v"), "Follow", "Died", SubResource("AnimationNodeStateMachineTransition_wwkwy"), "Start", "Intro", SubResource("AnimationNodeStateMachineTransition_4mtwj"), "Intro", "Waiting", SubResource("AnimationNodeStateMachineTransition_ltfmq"), "Waiting", "Resurection", SubResource("AnimationNodeStateMachineTransition_kv1q4"), "Resurection", "Follow", SubResource("AnimationNodeStateMachineTransition_an34w")]
graph_offset = Vector2(-164.559, -67)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_42ng7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gk32l"]
size = Vector2(44, 44)

[node name="Rensen" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_eredk")
renStats = ExtResource("2_ngyl8")
renMovement = ExtResource("3_gbs3j")
bullet = ExtResource("4_kgheo")

[node name="Effect" type="Node2D" parent="."]

[node name="DyingParticle" type="GPUParticles2D" parent="Effect"]
visible = false
modulate = Color(0, 0, 0, 1)
amount = 40
process_material = SubResource("ParticleProcessMaterial_cs1kj")
lifetime = 2.0
speed_scale = 2.0
trail_enabled = true

[node name="Explosion" type="GPUParticles2D" parent="Effect"]
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_idb1h")
lifetime = 8.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
collision_base_size = 14.36

[node name="Spawn" type="GPUParticles2D" parent="Effect"]
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_674n2")
lifetime = 10.0
speed_scale = 2.0
explosiveness = 1.0
trail_enabled = true

[node name="Flash" type="CanvasLayer" parent="Effect"]

[node name="ColorRect" type="ColorRect" parent="Effect/Flash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00838, 1.04052)
color = Color(1, 1, 1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8fv4c")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(0.376839, 0.376839)
texture = ExtResource("1_aqn3d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
libraries = {
"": SubResource("AnimationLibrary_35c6x")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_wnqau")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_42ng7")
parameters/conditions/FinalDeath = false
parameters/conditions/FirstDeath = false
parameters/conditions/circleAttack = false

[node name="SpreadShot" type="Node2D" parent="."]

[node name="Shot1" type="Marker2D" parent="SpreadShot"]
position = Vector2(24, -40)
rotation = -0.349066

[node name="Shot2" type="Marker2D" parent="SpreadShot"]
position = Vector2(40, -24)
rotation = -0.349066

[node name="Shot3" type="Marker2D" parent="SpreadShot"]
position = Vector2(48, 0)

[node name="Shot4" type="Marker2D" parent="SpreadShot"]
position = Vector2(40, 24)
rotation = 0.349066

[node name="Shot5" type="Marker2D" parent="SpreadShot"]
position = Vector2(24, 40)
rotation = 0.349066

[node name="CircleShotTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="HitSound" type="Node" parent="."]
script = ExtResource("6_ko50r")
Count = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HitSound"]
stream = ExtResource("7_mjvbq")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_gk32l")

[connection signal="timeout" from="CircleShotTimer" to="." method="_on_circle_shot_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
